// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignTeaser renders correctly: default CampaignTeaser with maximum configuration 1`] = `
.c9 {
  margin: 0;
  font-size: 12px;
  line-height: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c16 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: "SourceSansPro","Oswald",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c19 {
  color: #666666;
  font-size: 16px;
  line-height: 28px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  overflow: hidden;
  max-height: calc(28px * 3);
  -webkit-line-clamp: 3;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c24 {
  color: #CCCCCC;
  font-size: 14px;
  line-height: 16px;
  font-family: "Oswald","Raleway",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c17 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c10 {
  background-color: #00C8DC;
  color: #FFFFFF;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 24px;
  padding-right: 24px;
  margin-left: 0;
  margin-right: 9px;
  box-sizing: content-box;
  height: 28px;
  overflow: auto;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  overflow: hidden;
  height: 30px;
}

.c8 {
  display: inline-block;
  position: relative;
  margin-right: 8px;
  max-width: 100%;
}

.c11 {
  display: inline-block;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c30 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c30 img {
  height: 100%;
  object-fit: cover;
}

.c36 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 100%;
}

.c36 img {
  height: 32px;
  object-fit: contain;
}

.c6 {
  position: absolute;
  left: 0;
  top: -14px;
  max-width: 100%;
  z-index: 1;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  padding: 8px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 2px 1px -1px rgba(0,0,0,0.06),0 1px 3px 0 rgba(0,0,0,0.10);
  color: #000000;
  background-color: #FFFFFF;
  border-bottom-width: 0px;
  border-top-width: 0px;
  border-right-width: 0px;
  border-left-width: 0px;
  border-radius: 4px;
  text-align: center;
  height: 100%;
  width: 100%;
}

.c37 img {
  display: block;
  max-width: 128px !important;
}

.c32 {
  display: none;
}

.c33 {
  margin-left: 8px;
}

.c3 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c3 .c5 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c34 {
  position: relative;
  outline: none;
  width: 100%;
}

.c34 .c5 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c23 {
  color: #666666;
  border-color: #E5E5E5;
  border-width: 1px;
  border-radius: 25px;
  border-style: solid;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin-right: 16px;
  margin-bottom: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c2 .c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  z-index: 1;
  right: 0;
  top: -24px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 .c31 > div {
  display: none;
}

.c2 .c31 > div:first-child {
  display: block;
}

.c1 {
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c13 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 8px 16px;
}

.c15 {
  text-align: left;
}

.c18 {
  margin: 8px 0 0 0;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 256px;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 2;
}

.c29 img {
  object-fit: contain;
  max-height: 250px;
}

.c28 {
  position: absolute;
  width: calc(100% + 16px);
  right: 16px;
  height: 100%;
  -webkit-transform: skew(-10.3deg);
  -ms-transform: skew(-10.3deg);
  transform: skew(-10.3deg);
}

.c28::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg');
}

.c28::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  background-image: url('public/images/small.jpg?q=1');
  background-color: #00C8DC;
}

.c27 {
  overflow: hidden;
  position: absolute;
  right: -16px;
  width: 100%;
  border-bottom-left-radius: 28.8px;
  border-top-left-radius: 5.76px;
  margin-top: 64px;
  height: 144px;
  -webkit-transform: skew(10.3deg);
  -ms-transform: skew(10.3deg);
  transform: skew(10.3deg);
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: auto;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
}

.c21 {
  max-height: calc((32px - 1px) * 2);
  overflow: hidden;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 16px;
}

.c21 .c22 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c26 {
  display: none;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c17 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c17 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c30 {
    max-width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c30 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c36 {
    max-width: auto;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c36 img {
    max-width: 100%;
    width: auto;
    height: auto;
  }
}

@media (max-width:752px) {
  .c6 > div > div:nth-child(n + 3) {
    display: none;
  }
}

@media (min-width:512px) {
  .c32 {
    position: absolute;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    z-index: 1;
    right: 0;
    top: -24px;
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:512px) {
  .c3:hover .c5,
  .c3:hover .c31 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media (min-width:512px) {
  .c34:hover .c5,
  .c34:hover .c31 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media (min-width:512px) {
  .c2 .c31 > div {
    display: block;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 .c31 img {
    width: 100%;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .fPAmXy .c31 img {
    width: 100%;
  }
}

@media (min-width:752px) {
  .c13 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c14 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:752px) {
  .c14 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c15 {
    width: 100%;
    position: relative;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c18 {
    margin: 16px 0 0 0;
  }
}

@media (min-width:752px) {
  .c25 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c25 {
    min-height: 352px;
  }
}

@media (max-width:752px) {
  .c29 {
    padding: 8px;
  }
}

@media (min-width:752px) {
  .c29 {
    margin: 24px;
    margin-left: 40px;
  }
}

@media (min-width:752px) {
  .c29 img {
    max-height: 300px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:752px) {
  .c21 {
    margin-top: 32px;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5 c6"
      >
        <div
          className="c7"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c10"
              fontSize="xxs"
            >
              <div
                className="c11"
              >
                Featured
              </div>
            </span>
          </div>
          <div
            className="c8"
          >
            <span
              className="c9 c10"
              fontSize="xxs"
            >
              <div
                className="c11"
              >
                Sponsored
              </div>
            </span>
          </div>
        </div>
      </div>
      <div
        className="c12"
        display="flex"
        elevation={0}
        overflow="hidden"
        shape="rounded-big"
      >
        <div
          className="c13"
        >
          <div
            className="c14"
          >
            <div
              className="c15"
            >
              <p
                className="c16 c17"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
              <div
                className="c18"
              >
                <span
                  className="c19"
                  color="grey5"
                  fontSize="sm"
                >
                  Well, the answer is obvious: “He hasn’t died yet.” Fortunately, for us, Munger has kept on ticking.
                </span>
              </div>
              <div
                className="c20"
              >
                <div
                  className="c21"
                >
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      73 assets
                    </span>
                  </div>
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      23hours 18minutes
                    </span>
                  </div>
                  <div
                    className="c22 c23"
                  >
                    <span
                      className="c24"
                      color="grey3"
                      fontSize="xs"
                    >
                      3% completed
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="c25"
            size="auto"
          >
            <div
              className="c26"
            >
              <svg
                height={588}
                viewBox="0 0 441 441"
                width={588}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M101.1 37.2c47 79.8 117.5 198.6 118.4 199.6.9 1 13.9-20.3 59.7-98 32.2-54.6 59.6-101 60.8-103.1l2.2-3.7H98.1l3 5.2zM202.3 269l-17.1 29h69.9l-2.8-4.8c-16.2-27.6-31.3-52.7-32-52.9-.5-.2-8.6 12.7-18 28.7zM59 333.2c-8.4 4.4-8.5 4.4-8.8 43.5l-.3 34.3H59v-49h18v-7H59v-4.5c0-5.5 2.2-10.1 5.2-11.1 2.6-.8 8.2-.7 10.9.1 1.6.5 1.9.1 1.9-2.9 0-4.3-.6-4.7-7.8-5.3-4.6-.4-6.5 0-10.2 1.9zM382 348.6v16.6l-4.9-4.4c-15.2-13.7-37.4-6.2-42.7 14.2-4.8 19 7.2 36 25.5 36 7.7 0 13.5-2.5 18-7.6 1.7-1.9 3.3-3.4 3.6-3.4.3 0 .5 2.2.5 5v5h8v-78h-8v16.6zm-13.7 13.3c4 1.6 9.9 7.3 11.8 11.6 6.3 13.9-3.8 30.8-18.5 30.8-13.3 0-22.3-12.1-19.6-26.5 1.4-7 4.9-12 10.2-14.7 4.6-2.2 11.9-2.8 16.1-1.2zM114 372v39h8v-78h-8v39zM140 367.2c0 32.2.1 34.5 2 37.5 3 4.9 6.2 6.5 13.3 6.6 8.2.1 10.7-1.3 10.7-5.9 0-3.2-.2-3.5-2.2-2.7-4.5 1.6-10.7.9-13-1.5-2.2-2.1-2.3-3.1-2.6-20.7l-.3-18.5H166v-6.9l-8.7-.3-8.8-.3-.3-10.8-.3-10.7H140v34.2zM88 339.5v4.5h10v-9H88v4.5zM187.2 356.6c-8.9 4.4-14.4 14-14.4 25.3-.1 12.4 4.7 21.3 14.3 26.6 4.8 2.7 6.3 3 13.9 3 9.1-.1 13.4-1.6 19.9-7.1l3.2-2.7-2.2-2.3c-2.6-2.8-4.2-3-6-.8-1.8 2.1-7.7 5-11.9 5.8-5.2.9-12.9-1.7-16.7-5.6-3-3-6.3-9.3-6.3-11.8 0-.6 7.7-1 22.6-1h22.7l-.7-6.3c-1.3-11.1-6.5-19.6-14.8-23.8-5.8-3-16.9-2.6-23.6.7zm19.7 5.9c5.1 2.6 10.1 10.4 10.1 15.7 0 .5-8.1.8-18 .8h-18l.6-2.8c1.4-5.7 5.6-11.1 10.9-14 2.9-1.6 11.1-1.4 14.4.3zM258.5 355.9c-3.9 1.8-7.6 5.2-10.8 10.1-1.7 2.4-1.7 2.3-1.7-4.3V355h-8v56h7.8l.4-15.3c.3-14.2.5-15.6 3-20.7 3.7-7.4 10.3-12 17.4-12 2.2 0 2.4-.4 2.4-4.5 0-4.4-.1-4.5-3.2-4.5-1.8 0-5.1.9-7.3 1.9zM289.4 356.4c-10.5 4.9-16 15.1-15.2 28.5.6 9 2.8 14.1 8.7 19.4 5.7 5.2 10.4 6.9 18.6 7 7.9 0 15-2.5 19.7-7l2.8-2.7-2.1-2.2-2.2-2.3-3.3 2.6c-11.5 8.7-26.4 6.1-32.4-5.8-1.1-2.1-2-4.7-2-5.9 0-2 .5-2 22.1-2h22.2l-.5-6.8c-.5-7.3-3.8-15-8-18.9-6.9-6.5-19.2-8.2-28.4-3.9zm15.8 4.7c6.3 1.7 12.8 10.3 12.8 16.8 0 .8-5.2 1.1-18 1.1-20 0-19.4.3-16.5-6.8 2.1-4.9 5.2-8.1 10-10.3 4.6-2.1 6.6-2.3 11.7-.8zM89 383v28h8v-56h-8v28z"
                />
              </svg>
            </div>
            <div
              className="c27"
              height={144}
            >
              <div
                className="c28"
              />
            </div>
            <div
              className="c29"
            >
              <div
                className="c30"
                height="100%"
                width="100%"
              >
                <picture
                  style={
                    Object {
                      "height": "100%",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="100%"
                    loading="eager"
                    src="public/images/teasers/product02.png"
                    width="100%"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="c31 c32"
      >
        <div
          className="c33"
        >
          <div
            className="c34"
          >
            <div
              className="c35"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c36 c37"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_assets/featured_asset_01.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c33"
        >
          <div
            className="c34"
          >
            <div
              className="c35"
              display="flex"
              elevation={1}
              shape="rounded-small"
            >
              <div
                className="c36 c37"
                height="32px"
                width="auto"
              >
                <picture
                  style={
                    Object {
                      "height": "32px",
                      "width": "100%",
                    }
                  }
                >
                  <img
                    alt="image"
                    height="32px"
                    loading="eager"
                    src="public/images/featured_assets/featured_asset_03.png"
                    width="auto"
                  />
                </picture>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`CampaignTeaser renders correctly: default CampaignTeaser with minimal configuration 1`] = `
.c9 {
  margin: 0;
  color: #00C8DC;
  font-size: 40px;
  line-height: 44px;
  font-family: "SourceSansPro","Oswald",Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  white-space: normal;
  overflow: hidden;
  padding-left: 2px;
  max-height: calc(44px * 2);
  -webkit-line-clamp: 2;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.c10 {
  font-weight: bold;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  max-height: -webkit-fit-content;
  max-height: -moz-fit-content;
  max-height: fit-content;
  padding-top: 0;
  text-transform: none;
  line-height: 58px;
  font-size: 75px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  line-height: 1.43;
  overflow: hidden;
  color: #000000;
  border: 1px solid #E5E5E5;
  background-color: #FFFFFF;
  border-radius: 8px;
  height: 100%;
  width: 100%;
}

.c3 {
  position: relative;
  outline: none;
  width: 100%;
  height: 100%;
}

.c3 .Cardstyled__StyledBadgeLineWrapper-sc-11d7y5i-0 {
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-property: transform;
  transition-property: transform;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #999999;
  opacity: 1.0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  position: relative;
  padding: 16px;
}

.c0::after {
  content: '';
  position: absolute;
  display: none;
  bottom: -2px;
  height: 1px;
  background-color: #999999;
  -webkit-transform-origin: right center;
  -ms-transform-origin: right center;
  transform-origin: right center;
  -webkit-transform: scale(0,1);
  -ms-transform: scale(0,1);
  transform: scale(0,1);
  -webkit-transition: -webkit-transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  -webkit-transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
  transition: transform 0.25s cubic-bezier(0.37,0.31,0.2,0.85);
}

.c0:hover::after {
  -webkit-transform-origin: left center;
  -ms-transform-origin: left center;
  transform-origin: left center;
  -webkit-transform: scale(1,1);
  -ms-transform: scale(1,1);
  transform: scale(1,1);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  width: 100%;
  height: 100%;
}

.c4 {
  width: 100%;
  height: 100%;
  outline: none;
}

.c6 {
  cursor: initial;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-transform: translateY(0px);
  -ms-transform: translateY(0px);
  transform: translateY(0px);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  padding: 8px 16px;
}

.c8 {
  text-align: left;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  width: 100%;
  min-height: 256px;
}

.c13 {
  position: absolute;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url('');
  background-position: 50%;
  background-color: #00C8DC;
  width: 100%;
  height: 100%;
  z-index: -1;
  min-height: 256px;
}

.c12 {
  display: none;
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c10 {
    max-height: 100%;
  }
}

@media (min-width:752px) {
  .c10 {
    font-size: 40px;
    line-height: 70px;
  }
}

@media (min-width:512px) {
  .c3:hover .Cardstyled__StyledBadgeLineWrapper-sc-11d7y5i-0,
  .c3:hover .Cardstyled__StyledFeaturedAssetsContainer-sc-11d7y5i-3 {
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c2 .Cardstyled__StyledFeaturedAssetsContainer-sc-11d7y5i-3 img {
    width: 100%;
  }
}

@media (min-width:752px) {
  .c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:752px) {
  .c7 {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

@media (min-width:752px) {
  .c7 {
    padding: 32px 24px;
  }
}

@media (min-width:752px) {
  .c8 {
    width: 100%;
    position: relative;
    z-index: 2;
  }
}

@media (min-width:752px) {
  .c11 {
    -webkit-flex: 2;
    -ms-flex: 2;
    flex: 2;
  }
}

@media (min-width:752px) {
  .c11 {
    min-height: 352px;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {
  .c13 {
    left: 0;
  }
}

<a
  className="c0 c1"
  color="grey4"
  target="_self"
>
  <div
    className="c2"
  >
    <div
      className="c3 c4"
    >
      <div
        className="c5"
        display="flex"
        elevation={0}
        overflow="hidden"
        shape="rounded-big"
      >
        <div
          className="c6"
        >
          <div
            className="c7"
          >
            <div
              className="c8"
            >
              <p
                className="c9 c10"
                color="primary"
                fontFamily="featured"
                fontSize="xxxxl"
                spacing="base"
              >
                High standards require sensible processes
              </p>
            </div>
          </div>
          <div
            className="c11"
            size="auto"
          >
            <div
              className="c12"
            >
              <svg
                height={588}
                viewBox="0 0 441 441"
                width={588}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M101.1 37.2c47 79.8 117.5 198.6 118.4 199.6.9 1 13.9-20.3 59.7-98 32.2-54.6 59.6-101 60.8-103.1l2.2-3.7H98.1l3 5.2zM202.3 269l-17.1 29h69.9l-2.8-4.8c-16.2-27.6-31.3-52.7-32-52.9-.5-.2-8.6 12.7-18 28.7zM59 333.2c-8.4 4.4-8.5 4.4-8.8 43.5l-.3 34.3H59v-49h18v-7H59v-4.5c0-5.5 2.2-10.1 5.2-11.1 2.6-.8 8.2-.7 10.9.1 1.6.5 1.9.1 1.9-2.9 0-4.3-.6-4.7-7.8-5.3-4.6-.4-6.5 0-10.2 1.9zM382 348.6v16.6l-4.9-4.4c-15.2-13.7-37.4-6.2-42.7 14.2-4.8 19 7.2 36 25.5 36 7.7 0 13.5-2.5 18-7.6 1.7-1.9 3.3-3.4 3.6-3.4.3 0 .5 2.2.5 5v5h8v-78h-8v16.6zm-13.7 13.3c4 1.6 9.9 7.3 11.8 11.6 6.3 13.9-3.8 30.8-18.5 30.8-13.3 0-22.3-12.1-19.6-26.5 1.4-7 4.9-12 10.2-14.7 4.6-2.2 11.9-2.8 16.1-1.2zM114 372v39h8v-78h-8v39zM140 367.2c0 32.2.1 34.5 2 37.5 3 4.9 6.2 6.5 13.3 6.6 8.2.1 10.7-1.3 10.7-5.9 0-3.2-.2-3.5-2.2-2.7-4.5 1.6-10.7.9-13-1.5-2.2-2.1-2.3-3.1-2.6-20.7l-.3-18.5H166v-6.9l-8.7-.3-8.8-.3-.3-10.8-.3-10.7H140v34.2zM88 339.5v4.5h10v-9H88v4.5zM187.2 356.6c-8.9 4.4-14.4 14-14.4 25.3-.1 12.4 4.7 21.3 14.3 26.6 4.8 2.7 6.3 3 13.9 3 9.1-.1 13.4-1.6 19.9-7.1l3.2-2.7-2.2-2.3c-2.6-2.8-4.2-3-6-.8-1.8 2.1-7.7 5-11.9 5.8-5.2.9-12.9-1.7-16.7-5.6-3-3-6.3-9.3-6.3-11.8 0-.6 7.7-1 22.6-1h22.7l-.7-6.3c-1.3-11.1-6.5-19.6-14.8-23.8-5.8-3-16.9-2.6-23.6.7zm19.7 5.9c5.1 2.6 10.1 10.4 10.1 15.7 0 .5-8.1.8-18 .8h-18l.6-2.8c1.4-5.7 5.6-11.1 10.9-14 2.9-1.6 11.1-1.4 14.4.3zM258.5 355.9c-3.9 1.8-7.6 5.2-10.8 10.1-1.7 2.4-1.7 2.3-1.7-4.3V355h-8v56h7.8l.4-15.3c.3-14.2.5-15.6 3-20.7 3.7-7.4 10.3-12 17.4-12 2.2 0 2.4-.4 2.4-4.5 0-4.4-.1-4.5-3.2-4.5-1.8 0-5.1.9-7.3 1.9zM289.4 356.4c-10.5 4.9-16 15.1-15.2 28.5.6 9 2.8 14.1 8.7 19.4 5.7 5.2 10.4 6.9 18.6 7 7.9 0 15-2.5 19.7-7l2.8-2.7-2.1-2.2-2.2-2.3-3.3 2.6c-11.5 8.7-26.4 6.1-32.4-5.8-1.1-2.1-2-4.7-2-5.9 0-2 .5-2 22.1-2h22.2l-.5-6.8c-.5-7.3-3.8-15-8-18.9-6.9-6.5-19.2-8.2-28.4-3.9zm15.8 4.7c6.3 1.7 12.8 10.3 12.8 16.8 0 .8-5.2 1.1-18 1.1-20 0-19.4.3-16.5-6.8 2.1-4.9 5.2-8.1 10-10.3 4.6-2.1 6.6-2.3 11.7-.8zM89 383v28h8v-56h-8v28z"
                />
              </svg>
            </div>
            <div
              className="c13"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;
